feat: criação da tela de agendamento

--- a/src/public/medicamento.html
+++ b/src/public/medicamento.html
@@ -56,7 +56,7 @@
               <h3>Upload de Receitas</h3>
             </a>
           </a>
-          <a href="./farmacia.html" class="active">
+          <a href="./farmacia.html">
             <span class="material-symbols-rounded">emoji_transportation</span>
             <h3>Farmácias</h3>
           </a>
