--- a/src/public/prescricao.html
+++ b/src/public/prescricao.html
@@ -325,9 +325,9 @@ button.red{
                     <h3>Farmácias</h3>
                     <!-- <span class="message-count">1</span> -->
 
-                    <a href="./prescricoes.html" class="active">
+                    <a href="./prescricao.html" class="active">
                         <span class="material-symbols-rounded">book</span>
-                        <h3>Prescrições</h3>
+                        <h3>Prescrição</h3>
 
                          <!-- <span class="message-count">1</span> -->
                 </a>
@@ -343,7 +343,7 @@ button.red{
         </aside>
         <!--MAIN-->
         <header>
-          <h1 class="header-title">Prescrições</h1>
+          <h1 class="header-title">Prescrição</h1>
       </header>
       <main>
           <button type="button" class="button blue mobile" id="cadastrarCliente">Cadastrar</button>
@@ -370,7 +370,7 @@ button.red{
           <div class="modal" id="modal">
               <div class="modal-content">
                   <header class="modal-header">
-                      <h2>Prescrições</h2>
+                      <h2>Prescrição</h2>
                       <span class="modal-close" id="modalClose">&#10006;</span>
                   </header>
                   <form id="form" class="modal-form">
