--- a/src/public/index.html
+++ b/src/public/index.html
@@ -71,7 +71,7 @@
             <div class="recent-orders">
                 <div class="header">                
                     <h2>Agenda</h2>
-                    <button class="action-btn" onclick="location.href='./agendamento';">Novo Agendamento</button>
+                    <button class="action-btn" onclick="location.href='./agendamento.html';">Novo Agendamento</button>
                 </div>
                 <div id='calendar'></div>
             </div>
