--- a/src/public/index.html
+++ b/src/public/index.html
@@ -31,7 +31,7 @@
                     <span class="material-symbols-rounded">grid_view</span>
                     <h3>Dashboard</h3>
                 </a>
-                <a href="#">
+                <a href="./clinicaLabor.html">
                     <span class="material-symbols-rounded">add_business</span>
                     <h3>Clinica/Labor</h3>
                 </a>
